# rag-for-math-qa

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile.streamlit  Makefile  README.md  pyproject.toml
data/: .gitignore
data/derived/generations/: math_df.csv
figures/: rori-rag-final.drawio
notebooks/: EvaluateRetrievalImpact.ipynb  MathNationDataExploration.ipynb  MetricTesting.ipynb  Qualtrics.ipynb  SurveyDataAnalysis.ipynb  bleurt_testing.ipynb
src/annotation/: auth.py
src/experiment/: completion_utils.py  generate.py  guidance_conditions.py  metrics.py  qualtrics.py  tokenize.py
src/rag/: embedding_utils.py  logit_bias.py  misconceptions.py  prompt_utils.py  retrieval.py  retrieval_strategies.py
src/streamlit/: Annotation_tool.py
src/streamlit/pages/: Relevance.py
tests/unit/: conftest.py  test_auth.py  test_completion_utils.py  test_generate.py  test_metrics.py  test_qualtrics.py  test_tokenize.py
tests/unit/rag/: conftest.py  test_embedding_utils.py  test_gpf_utils.py  test_logit_bias.py  test_misconceptions.py  test_prompt_utils.py  test_retrieval.py  test_retrieval_strategies.py
