[tool.poetry]
name = "annotation-tools"
version = "0.1.0"
description = "Annotation web interface and experimentation/analysis scripts"
authors = [
    "Zachary Levonian <zach@digitalharbor.org>"
]
license = "MIT"
readme = "README.md"
packages = [{include = "experiment", from = "src"}, {include = "rag", from = "src"}]
repository = "https://github.com/levon003/annotation-tools.git"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
poetry = "1.6.1"
streamlit = "^1.23.1"
pandas = "^2.0.2"
scipy = "^1.11.0"
argon2-cffi = "^21.3.0"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
numpy = "^1.24.3"
spacy = "^3.6.1"
statsmodels = "^0.14.0"
tabulate = "^0.9.0"
scikit-learn = "^1.3.0"
openai = "^0.28.0"
tiktoken = "^0.4.0"
python-dotenv = "^1.0.0"
evaluate = "^0.4.0"
bert-score = "^0.3.13"
bleurt = {git = "https://github.com/google-research/bleurt.git"}
tensorflow = {version = "^2.13.0" }
tensorflow-macos = { version = "^2.13.0", platform = "darwin", markers = "platform_machine=='arm64'" }
tensorflow-intel = { version = "^2.13.0", platform = "win32" }
tensorflow-cpu = [
    { version = "^2.13.0", platform = "linux", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },
    { version = "^2.13.0", platform = "darwin", markers = "platform_machine!='arm64' and platform_machine!='aarch64'" },]
tensorflow-cpu-aws = { version = "^2.13.0", platform = "linux", markers = "platform_machine=='arm64' or platform_machine=='aarch64'" }
# https://github.com/tensorflow/tensorflow/blob/adb39b04e9cb116df4659a7e2de9eea27e62f25c/tensorflow/tools/pip_package/setup.py#L107-L108
# https://github.com/python-poetry/poetry/issues/8271#issuecomment-1697740447
tensorflow-io-gcs-filesystem = [
    { version = ">= 0.23.1", markers = "platform_machine!='arm64' or platform_system!='Darwin'" },
    { version = "< 0.32.0", markers = "platform_system == 'Windows'" }
]
datasets = "2.10.0"
krippendorff = "^0.6.0"
skrub = {git = "https://github.com/skrub-data/skrub.git"}

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
black = "^22.12.0"
isort = "^5.12"
flake8 = "^6.0.0"
nbqa = "^1.6.0"
pre-commit = "^2.21.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .github
    | .gitignore
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | venv
    | _build
    | buck-out
    | build
    | ci
    | data
    | dist
    | docs
    | docsrc
  )/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = "venv"
